# panini-mvp

./: .gitignore  CONTEXT.md  README.md  docker-compose.local.yml  docker-compose.yml  wc2026_sections.json  wc2026_template.json
backend/: .env  .env.example  Dockerfile  panini.db  pyproject.toml
backend/src/: config.py  main.py
backend/src/application/use_cases/: album_use_cases.py  swap_request_use_cases.py
backend/src/domain/entities/: models.py
backend/src/domain/ports/: repositories.py
backend/src/infrastructure/: auth.py  email_service.py  recaptcha.py
backend/src/infrastructure/db/: orm_models.py  session.py
backend/src/infrastructure/repositories/: sql_repositories.py
backend/src/infrastructure/seeders/: seeder.py  world_cup_2026.py
backend/src/interfaces/api/dependencies/: deps.py
backend/src/interfaces/api/routers/: api.py
backend/src/interfaces/schemas/: api_schemas.py
backend/tests/unit/: test_domain.py
deploy/: DEPLOY.md  backend.env.production.example  setup-server.sh
frontend/: Dockerfile  README.md  album.service.ts  angular.json  auth.service.ts  nginx.conf  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.routes.ts
frontend/src/app/core/guards/: admin.guard.ts
frontend/src/app/core/services/: album.service.ts  auth.service.ts  report.service.ts
frontend/src/app/features/admin/: admin-templates.component.ts  admin-users.component.ts
frontend/src/app/features/albums/: album-form.component.ts  album-list.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+9 files in other folders)
